templates/node-api/skeleton/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
spec:
  selector:
    app: ${APP_NAME}
  ports:
    - name: http
      port: 8080
      targetPort: 8080
